add adaptive about section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </a>
         </div>
     </section>
-    <section class="gallery">
+    <section class="gallery none">
         <div class="container">
             <div class="gallery__slider">
                 <div class="slider">
@@ -87,7 +87,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="2.4" class="img-number number-plant">
-                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant" class="card__img">
+                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -101,7 +102,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="3.1" class="img-number number-plant">
-                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x" alt="flower" class="card__img">
+                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x"
+                                            alt="flower" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -115,7 +117,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.2" class="img-number number-plant">
-                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf" class="card__img">
+                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -129,7 +132,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.4" class="img-number number-plant">
-                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood" class="card__img">
+                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -143,7 +147,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="2.4" class="img-number number-plant">
-                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant" class="card__img">
+                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -157,7 +162,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="3.1" class="img-number number-plant">
-                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x" alt="flower" class="card__img">
+                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x"
+                                            alt="flower" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -171,7 +177,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.2" class="img-number number-plant">
-                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf" class="card__img">
+                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -185,7 +192,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.4" class="img-number number-plant">
-                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood" class="card__img">
+                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -199,7 +207,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="2.4" class="img-number number-plant">
-                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant" class="card__img">
+                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -213,7 +222,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="3.1" class="img-number number-plant">
-                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x" alt="flower" class="card__img">
+                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x"
+                                            alt="flower" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -227,7 +237,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.2" class="img-number number-plant">
-                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf" class="card__img">
+                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -241,7 +252,8 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.4" class="img-number number-plant">
-                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood" class="card__img">
+                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood"
+                                            class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -276,38 +288,47 @@
                             </button>
                         </div>
 
-                        
+
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="about none">
+    <section class="about">
         <div class="container">
             <h2 class="about__title">Новые артефакты</h2>
             <div class="about-row">
-                <div class="samples">
-                    <div class="img-number number-moss-small" data-number="4.2">
-                        <img src="img/about/moss2.png" srcset="img/about/moss2@2x.png 2x" alt="moss2" class="samples__img--moss-small">
-                    </div>
-                    <div class="img-number number-moss" data-number="7.2">
-                        <img src="img/about/moss.png" srcset="img/about/moss@2x.png 2x" alt="moss" class="samples__img--moss">
-                    </div>
-                    <div class="img-number number-stick" data-number="2.7">
-                        <img src="img/about/stick.png" srcset="img/about/stick@2x.png 2x" alt="stick" class="samples__img--stick">
-                    </div>
-                    <div class="img-number number-flower" data-number="5.1">
-                        <img src="img/about/flower3.png" srcset="img/about/flower3@2x.png 2x" alt="flower" class="samples__img--flower">
-                    </div>
-                    <div class="img-number number-polypody" data-number="9.1">
-                        <img src="img/about/polypody.png" srcset="img/about/polypody@2x.png 2x" alt="polypody" class="samples__img--polypody">
-                    </div>
-                    <div class="img-number number-bark" data-number="1.7">
-                        <img src="img/about/bark.png" srcset="img/about/bark@2x.png 2x" alt="bark" class="samples__img--bark">
-                    </div>
-                    <div class="img-number number-flower-closed" data-number="2.3">
-                        <img src="img/about/flower2.png" srcset="img/about/flower2@2x.png 2x" alt="flower" class="samples__img--flower-closed">
+                <div class="samples-wrapper">
+                    <div class="samples">
+                        <div class="img-number number-moss-small" data-number="4.2">
+                            <img src="img/about/moss2.png" srcset="img/about/moss2@2x.png 2x" alt="moss2"
+                                class="samples__img--moss-small">
+                        </div>
+                        <div class="img-number number-moss" data-number="7.2">
+                            <img src="img/about/moss.png" srcset="img/about/moss@2x.png 2x" alt="moss"
+                                class="samples__img--moss">
+                        </div>
+                        <div class="img-number number-stick" data-number="2.7">
+                            <img src="img/about/stick.png" srcset="img/about/stick@2x.png 2x" alt="stick"
+                                class="samples__img--stick">
+                        </div>
+                        <div class="img-number number-flower" data-number="5.1">
+                            <img src="img/about/flower3.png" srcset="img/about/flower3@2x.png 2x" alt="flower"
+                                class="samples__img--flower">
+                        </div>
+                        <div class="img-number number-polypody" data-number="9.1">
+                            <img src="img/about/polypody.png" srcset="img/about/polypody@2x.png 2x" alt="polypody"
+                                class="samples__img--polypody">
+                        </div>
+                        <div class="img-number number-bark" data-number="1.7">
+                            <img src="img/about/bark.png" srcset="img/about/bark@2x.png 2x" alt="bark"
+                                class="samples__img--bark">
+                        </div>
+                        <div class="img-number number-flower-closed" data-number="2.3">
+                            <img src="img/about/flower2.png" srcset="img/about/flower2@2x.png 2x" alt="flower"
+                                class="samples__img--flower-closed">
+                        </div>
                     </div>
                 </div>
                 <div class="side">
