add adaptive help us section

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </div>
         </div>
     </section>
-    <section class="about">
+    <section class="about none">
         <div class="container">
             <h2 class="about__title">Новые артефакты</h2>
             <div class="about-row">
