--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             </form>
         </div>
     </section>
-    <footer class="footer none">
+    <footer class="footer">
         <ul class="social-list">
             <li>
                 <a href="#!" class="social-list__link">
