fix swiper pagination

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="header none">
+    <header class="header">
         <div class="container">
             <div class="nav">
                 <div class="nav-row">
@@ -60,7 +60,7 @@
             </div>
         </div>
     </header>
-    <section class="hero none">
+    <section class="hero">
         <div class="container">
             <h1 class="hero__title">Крупнейшая коллекция природных артефактов</h1>
             <p class="hero__text">
@@ -78,7 +78,7 @@
             </a>
         </div>
     </section>
-    <section class="gallery none">
+    <section class="gallery">
         <div class="container">
             <div class="gallery__slider">
                 <div class="slider">
@@ -295,7 +295,7 @@
             </div>
         </div>
     </section>
-    <section class="about none">
+    <section class="about">
         <div class="container">
             <h2 class="about__title">Новые артефакты</h2>
             <div class="about-row">
@@ -352,7 +352,7 @@
             </div>
         </div>
     </section>
-    <section class="help-us none">
+    <section class="help-us">
         <div class="container">
             <h2 class="help-us__title">Помочь проекту</h2>
             <p class="help-us__text">Равным образом, экономическая повестка сегодняшнего дня не даёт нам иного выбора,
