--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header none">
         <div class="container">
             <div class="nav">
                 <div class="nav-row">
@@ -60,7 +60,7 @@
             </div>
         </div>
     </header>
-    <section class="hero">
+    <section class="hero none">
         <div class="container">
             <h1 class="hero__title">Крупнейшая коллекция природных артефактов</h1>
             <p class="hero__text">
@@ -290,12 +290,14 @@
 
 
                     </div>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination-mask">
+                        <div class="swiper-pagination"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="about">
+    <section class="about none">
         <div class="container">
             <h2 class="about__title">Новые артефакты</h2>
             <div class="about-row">
@@ -352,7 +354,7 @@
             </div>
         </div>
     </section>
-    <section class="help-us">
+    <section class="help-us none">
         <div class="container">
             <h2 class="help-us__title">Помочь проекту</h2>
             <p class="help-us__text">Равным образом, экономическая повестка сегодняшнего дня не даёт нам иного выбора,
@@ -366,7 +368,7 @@
             </form>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer none">
         <ul class="social-list">
             <li>
                 <a href="#!" class="social-list__link">
